--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,13 +1,21 @@
 .app {
-    font-family: Arial, sans-serif;
-}
-
-.table-container {
-    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .controls {
     margin-bottom: 20px;
+}
+
+.graph-controls {
+    margin: 20px 0;
+}
+
+.table-container {
+    width: 100%;
+    max-width: 1400px;
+    overflow-x: auto;
 }
 
 table {
@@ -16,10 +24,43 @@ table {
 }
 
 th, td {
-    border: 1px solid #ddd;
     padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
 }
 
-th {
-    background-color: #f2f2f2;
+.pagination {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.pagination button {
+    margin: 0 5px;
+    padding: 5px 10px;
+}
+
+.pagination button.active {
+    font-weight: bold;
+}
+.line-min {
+    stroke: green;
+}
+
+.line-avg {
+    stroke: blue;
+}
+
+.line-max {
+    stroke: red;
+}
+
+
+svg text {
+    font: 15px Verdana;
+}
+svg path, line {
+    fill: none;
+    stroke: #333333;
+    width: 1px;
 }
